@@ -1,1 +1,4 @@
-53759B51E31188E518972B57A118615F
+# MD5 checksums generated by MD5summer (http://www.md5summer.org)
+# Generated 5/6/2013 7:22:40 AM
+
+bfbefb9056ad99c98e8cf50b33e63cae *addons.xml
